--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+<!DOCTYPE HTML>
+<html>
 theme: jekyll-theme-modernist
 title: Welcome to Kev's homepage!
 description: Homepage for username KevShaw42
+<br>
+</html>
